--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js">
+    <script src="https://kit.fontawesome.com/d81745741b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -35,38 +35,57 @@
       </div>
     </nav>
     <header class="teal-section" id="intro">
-      <div class="intro py-2">
+      <div class="intro">
         <div class="avatar-wrapper">
           <img src="./img/ava.jpg" alt="" class="avatar">
         </div>
         <div class="">
-          <h1 class="max-heading">This is Huong</h1>
+          <h1 class="max-heading">Hi, I'm Huong</h1>
           <h3 class="">Web developer - Thinker - Inspirer</h3>
         </div>
       </div>
     </header>
 
-    <section class="projects white-section" id="projects">
-      <h2>Projects</h2>
-      <div class="widgets">
-          <img src="./img/proj1.png" alt="" class="widget">
-          <img src="./img/proj1.png" alt="" class="widget">
-          <img src="./img/proj1.png" alt="" class="widget">
-          <img src="./img/proj1.png" alt="" class="widget">
-          <img src="./img/proj1.png" alt="" class="widget">
-          <img src="./img/proj1.png" alt="" class="widget">
+    <section class="white-section" id="projects">
+      <div class="projects">
+        <h2 class="page-heading">My works</h2>
+        <div class="widgets">
+            <img src="./img/proj1.png" alt="" class="widget">
+            <img src="./img/proj1.png" alt="" class="widget">
+            <img src="./img/proj1.png" alt="" class="widget">
+            <img src="./img/proj1.png" alt="" class="widget">
+            <img src="./img/proj1.png" alt="" class="widget">
+            <img src="./img/proj1.png" alt="" class="widget">
+        </div>
       </div>
     </section>
 
-    <section class="about teal-section" id="about">
-      <h2>About</h2>
-      <h3>Huong is a DEV</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <section class="teal-section" id="about">
+      <div class="about">
+        <h2 class="page-heading">About me...</h2>
+        <p>I've worked on several web projects with different roles: frontend developer, backend developer, tester and so on.</p>
+        <p>My goal is to become a proficient web developer who can create true values for life</p>
+        <p>Since starting to pursue web development career, I’ve always been a responsible and positive person who enjoys learning. I believe that a passion for learning and growing, together with a positive point of view is always the best material for building great things in life.</p>
+      </div>
     </section>
 
-    <section class="contact white-section" id="contact">
-      <h2>Contact</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <section class="white-section" id="contact">
+      <div class="contact">
+        <h2 class="page-heading">Get in touch</h2>
+        <p></p>
+        <p>
+            <i class="far fa-envelope fa-lg"></i>
+            <strong class="">nguyenquynhhuong&#64;gmail.com</strong>
+        </p>
+        <p>
+          <i class="fab fa-linkedin fa-lg"></i>
+          <strong>https://www.linkedin.com/in/huong-nguyen-820027123/</strong>
+        </p>
+        <p>
+          <i class="fab fa-github-square fa-lg"></i>
+          <strong>https://github.com/IlytaN</strong>
+        </p>
+      </div>
     </section>
 
     <footer>
