--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huong's website</title>
     <link rel="icon" href="./img/log.png">
-
+    <!-- hamburger button -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.css" crossorigin="anonymous">
+    <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/d81745741b.js" crossorigin="anonymous"></script>
+    <!-- Animation on scroll -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Custom -->
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body>
+  <body class="">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <img src="./img/logo.png" alt="" height="100px">
         <a class="navbar-brand" href="#intro">MIDNIGHT SCENT</a>
         <button class="navbar-toggler text-uppercase font-weight-bold text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive"  aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-bars fa-2x"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
@@ -34,34 +41,73 @@
         </div>
       </div>
     </nav>
-    <header class="teal-section" id="intro">
+    <header class="pink-section" id="intro">
       <div class="intro">
         <div class="avatar-wrapper">
           <img src="./img/ava.jpg" alt="" class="avatar">
         </div>
-        <div class="">
+        <div class="" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
           <h1 class="max-heading">Hi, I'm Huong</h1>
           <h3 class="">Web developer - Thinker - Inspirer</h3>
         </div>
       </div>
     </header>
 
-    <section class="white-section" id="projects">
+    <section class="white-section" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1500" id="projects">
       <div class="projects">
         <h2 class="page-heading">My works</h2>
+        <p>Here are a few projects I completed. Want to see more? <strong><a href="mailto:nguyenquynhhuong2305@gmail.com">Email me.</a></strong></p>
         <div class="widgets">
-            <img src="./img/proj1.png" alt="" class="widget">
-            <img src="./img/proj1.png" alt="" class="widget">
-            <img src="./img/proj1.png" alt="" class="widget">
-            <img src="./img/proj1.png" alt="" class="widget">
-            <img src="./img/proj1.png" alt="" class="widget">
-            <img src="./img/proj1.png" alt="" class="widget">
+            <div class="widget">
+              <div class="hovereffect">
+                <img src="./img/camera1.jpg" alt="" id="insta">
+                <div class="overlay">
+                  <h2>Instagram</h2>
+                  <p>
+                  <a href="" data-toggle="modal" data-target="#instaModal">LEARN MORE</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="widget" >
+              <div class="hovereffect">
+                <img src="./img/puppy2.jpg" alt="" id="pet">
+                <div class="overlay">
+                  <h2>Pet Care System</h2>
+                  <p>
+                  <a href="" data-toggle="modal" data-target="#petModal">LEARN MORE</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="widget" >
+              <div class="hovereffect">
+                <img src="./img/drugs2.jpg" alt="" id="medic">
+                <div class="overlay">
+                  <h2>Medicool</h2>
+                  <p>
+                  <a href="" data-toggle="modal" data-target="#medicModal">LEARN MORE</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="widget" >
+              <div class="hovereffect">
+                <img src="./img/clinic3.jpg" alt="" id="clinic">
+                <div class="overlay">
+                  <h2>Surgery clinic</h2>
+                  <p>
+                  <a href="" data-toggle="modal" data-target="#clinicModal">LEARN MORE</a>
+                  </p>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
 
-    <section class="teal-section" id="about">
-      <div class="about">
+    <section class="pink-section" id="about">
+      <div class="about" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
         <h2 class="page-heading">About me...</h2>
         <p>I've worked on several web projects with different roles: frontend developer, backend developer, tester and so on.</p>
         <p>My goal is to become a proficient web developer who can create true values for life</p>
@@ -70,7 +116,7 @@
     </section>
 
     <section class="white-section" id="contact">
-      <div class="contact">
+      <div class="contact" data-aos="fade-left" data-aos-delay="100" data-aos-duration="1500">
         <h2 class="page-heading">Get in touch</h2>
         <p></p>
         <p>
@@ -92,6 +138,131 @@
       <p class="pt-5">Copyright &copy; MidnightScent 2020</p>
     </footer>
 
+
+    <!-- Instagram Modal -->
+    <div class="modal fade" id="instaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title dark-blue" id="exampleModalLabel">Instagram</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <i class="fas fa-times fa-lg"></i>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="">
+              <h5>The Scenario</h5>
+              <p>Nowadays, social media apps have taken up a great part of our life. Among them, Instagram has become the largest photo-sharing app and attract 1 billion users around the world. Instagram these days is a complex platform with many features being built on top of various technologies such as React Native, Django (Python), PostgreSQL etc.</p>
+              <p>Inspired by what Instagram achieved, I decided to develop a mini version of Instagram applying the technologies I had learned at my university instead of Instagram's real tech stack. The clone was planned to include  some of Instagram's basic features which were User authorization, Post creation, Tagging, Searching and News feed (Like and comment). It was also important that the clone would provide a mobile-app experience and its UI must look the same with the real app.</p>
+            </div>
+            <div class="">
+              <h5>The Product</h5>
+              <img src="img/insta.png" alt="">
+              <p>A hybrid app was developed (the screenshot above) and it gave the users the same feeling as Instagram did. Users could install, sign up, sign in, create post with tags, like others' posts and search posts based on the tags. To do that, a client-server model was applied and two separate repositories were set up for the client application and the server. HTML, CSS, Ionic and AngularJS were made use of to create the mobile application. The server was created using NodeJS and it was deployed to heroku.com. Both the client app and the server were amazingly fast and secured when they communicated with each other using REST API</p>
+            </div>
+            <div class="">
+              <h5>Technologies</h5>
+              <p>AngularJS, NodeJS, Ionic, HTML, CSS</p>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-close" data-dismiss="modal">
+              <a href="https://github.com/IlytaN/Instagram_server_phase2">See server codes</a>
+            </button>
+            <button type="button" class="btn btn-close" data-dismiss="modal">
+              <a href="https://github.com/IlytaN/Instagram_client_phase2.git">See client codes</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pet Modal -->
+    <div class="modal fade" id="petModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title dark-blue" id="exampleModalLabel">Pet Care System</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <i class="fas fa-times fa-lg"></i>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="">
+              <h5>The Scenario</h5>
+              <p>Nowadays, owning a pet becomes more challenging for people due to the fact that pet health is affected by feeding schedule, while people cannot always stay at home to feed their dear friends. Although the urge to have an automatic pet feeder at home has raised significantly worldwide, it is not yet popular and affordable in many countries at the time. As a result, DIY pet care system can be an excellent choice for people who are not able to purchase automatic pet feeder.</p>
+              <p>The aim of this project was to create a pet feeding machine and a web application for remotely control the machine. It was also important to apply and study Raspberry Pi, ReactJS and NodeJS which are the most popular technologies from both IoT and Web development so that an objective evaluation could be given upon this approach.</p>
+            </div>
+            <div class="">
+              <h5>The Product</h5>
+              <img class="modal-img" src="img/pi-servo.jpg" width="400" height="300" alt="">
+              <p>A pet feeding machine and a web application were developed. The pet feeding machine included a food dispenser, a servo and Raspberry Pi. Pet’s food could be released from the food dispenser as a result of Raspberry Pi triggering the servo to rotate the dispenser’s spinner. NodeJS and Pigpio – a C library - were applied to receive the requests from the web app and manipulate the servo.</p>
+              <!-- <video class="modal-img" width="400" controls>
+                <source src="img/pet.mp4" type="video/mp4">
+                <source src="img/pet.ogg" type="video/ogg">
+              Your browser does not support the video tag.
+              </video> -->
+              <p>Although the web application's UI was simple, it was a mobile-friendly progressive web app with all the core features such as <i>Feed now</i> and <i>Schedule next feed</i> included. ReactJS was used to make this application.</p>
+            </div>
+            <div class="">
+              <h5>Technologies</h5>
+              <p>Raspberry Pi, ReactJS, React-bootstrap, NodeJS, Node-schedule, HTML, CSS</p>
+            </div>
+          </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-close" data-dismiss="modal">
+              <a href="#">See codes</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="medicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title dark-blue" id="exampleModalLabel">Medicool</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <i class="fas fa-times fa-lg"></i>
+            </button>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-close" data-dismiss="modal">
+              <a href="#">See codes</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="clinicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title dark-blue" id="exampleModalLabel">Surgery Clinic</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <i class="fas fa-times fa-lg"></i>
+            </button>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-close" data-dismiss="modal">
+              <a href="#">See codes</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Custom scripts -->
     <script src="js/index.js"></script>
 
@@ -100,25 +271,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
-    // Only show menu when scroll up
-    $(document).ready(function(){
-      var position = $(window).scrollTop();
-      $(window).scroll(function() {
-          var scroll = $(window).scrollTop();
-              if (scroll > position) {
-                  $('#mainNav').fadeOut(500);
-              } else {
-                  $('#mainNav').fadeIn(500);
-              }
-              position = scroll;
+      // Only show menu when scroll up
+      $(document).ready(function(){
+        var position = $(window).scrollTop();
+        $(window).scroll(function() {
+            var scroll = $(window).scrollTop();
+                if (scroll > position) {
+                    $('#mainNav').fadeOut(500);
+                } else {
+                    $('#mainNav').fadeIn(500);
+                }
+                position = scroll;
+            });
           });
-        });
 
       // Update navbar on scroll
       $('body').scrollspy({
         target: '#mainNav',
         offset: 80
       });
+
+      // Initialize AOS
+      AOS.init();
     </script>
   </body>
 </html>
