fix hover and responsive bugs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huong's website</title>
-    <link rel="icon" href="./img/log.png">
+    <link rel="icon" href="./img/flower.png">
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -18,14 +18,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <img id="logo" src="./img/logo.png" alt="" height="100px">
-        <a class="navbar-brand" href="#intro">MIDNIGHT SCENT</a>
+        <a class="navbar-brand " href="#intro">MIDNIGHT SCENT</a>
         <button class="navbar-toggler text-uppercase font-weight-bold text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive"  aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <img class="nav-icon" src="./img/bars-solid.svg" alt="">
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#projects">Projects</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded " href="#projects">Projects</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a>
@@ -56,7 +56,7 @@
       <section class="white-section text-center" id="projects">
         <div class="projects">
           <h2 class="page-heading">My works <img src="./img/project.png" alt="" /></h2>
-          <p>Here are a few projects I completed. Want to see more? <strong><a href="mailto:nguyenquynhhuong2305@gmail.com" class="blue-link">Email me.</a></strong></p>
+          <p>Here are a few projects I completed. Do you want to see more? <strong><a href="mailto:nguyenquynhhuong2305@gmail.com" class="blue-link">Email me.</a></strong></p>
           <div class="widgets">
               <div class="widget" data-aos="zoom-in-right" data-aos-delay="100" data-aos-duration="1500">
                 <div class="hovereffect">
@@ -64,44 +64,33 @@
                   <div class="overlay">
                     <h3>Instagram</h3>
                     <p>
-                    <a href="" data-toggle="modal" data-target="#instaModal">LEARN MORE</a>
+                    <a class="info" href="" data-toggle="modal" data-target="#instaModal">LEARN MORE</a>
                     </p>
                   </div>
                 </div>
               </div>
               <div class="widget" data-aos="zoom-in-left" data-aos-delay="100" data-aos-duration="1500">
                 <div class="hovereffect">
-                  <img src="./img/puppy2.jpg" alt="" id="pet">
+                  <img class="" src="./img/puppy1.jpg" alt="" id="pet">
                   <div class="overlay">
                     <h3>Pet Care System</h3>
                     <p>
-                    <a href="" data-toggle="modal" data-target="#petModal">LEARN MORE</a>
+                    <a class="info" href="" data-toggle="modal" data-target="#petModal">LEARN MORE</a>
                     </p>
                   </div>
                 </div>
               </div>
               <div class="widget" data-aos="zoom-in-right" data-aos-delay="100" data-aos-duration="1500">
                 <div class="hovereffect">
-                  <img src="./img/drugs2.jpg" alt="" id="medic">
+                  <img src="./img/drugs1.jpg" alt="" id="medic">
                   <div class="overlay">
                     <h3>Medicool</h3>
                     <p>
-                    <a href="" data-toggle="modal" data-target="#medicModal">LEARN MORE</a>
+                    <a class="info" href="" data-toggle="modal" data-target="#medicModal">LEARN MORE</a>
                     </p>
                   </div>
                 </div>
               </div>
-              <!-- <div class="widget" data-aos="zoom-in-left" data-aos-delay="100" data-aos-duration="1500">
-                <div class="hovereffect">
-                  <img src="./img/clinic3.jpg" alt="" id="clinic">
-                  <div class="overlay">
-                    <h2>Surgery clinic</h2>
-                    <p>
-                    <a href="" data-toggle="modal" data-target="#clinicModal">LEARN MORE</a>
-                    </p>
-                  </div>
-                </div>
-              </div> -->
           </div>
         </div>
       </section>
@@ -143,7 +132,6 @@
           <h2 class="page-heading">Get in touch</h2>
           <div class="">
             <p>
-                <!-- <i class="far fa-envelope fa-lg"></i> -->
                 <img src="./img/gmail.png" alt="">
                 <strong class="">
                   <a href="mailto:nguyenquynhhuong2305@gmail.com" class="white-link">
@@ -191,7 +179,7 @@
             </div>
             <div class="">
               <h5>The Product</h5>
-              <img src="img/insta.png" alt="">
+              <img class="modal-img" src="img/insta.png" alt="">
               <p>A hybrid app was developed (the screenshot above) and it gave the users the same feeling as Instagram did. Users could install, sign up, sign in, create post with tags, like others' posts and search posts based on the tags. To do that, a client-server model was applied and two separate repositories were set up for the client application and the server. HTML, CSS, Ionic and AngularJS were made use of to create the mobile application. The server was created using NodeJS and it was deployed to heroku.com. Both the client app and the server were amazingly fast and secured when they communicated with each other using REST API</p>
             </div>
             <div class="">
@@ -229,7 +217,7 @@
             </div>
             <div class="">
               <h5>The Product</h5>
-              <img class="modal-img" src="img/pi-servo.jpg" width="400" height="300" alt="">
+              <img class="modal-img" src="img/pi-servo.jpg" alt="">
               <p>A pet feeding machine and a web application were developed. The pet feeding machine included a food dispenser, a servo and Raspberry Pi. Pet’s food could be released from the food dispenser as a result of Raspberry Pi triggering the servo to rotate the dispenser’s spinner. NodeJS and Pigpio – a C library - were applied to receive the requests from the web app and manipulate the servo.</p>
               <p>Although the web application's UI was simple, it was a mobile-friendly progressive web app with all the core features such as <i>Feed now</i> and <i>Schedule next feed</i> included. ReactJS was used to make this application.</p>
             </div>
@@ -270,9 +258,9 @@
               <h5>The Product</h5>
               <p>A 4-member team including me worked on this project from planning and designing phase to development and testing phase.</p>
               <p>As a result, a website was made for the pharmacy employees to manage medicine information such as names, dosage, availability etc. and pharmacy information. All CRUD actions were available in this PHP web application. A database was also created with MySQLWorkbench and it worked perfectly with both this admin panel and the mobile application.</p>
-              <img src="img/medic1.png" alt="">
+              <img class="modal-img" src="img/medic1.png" alt="">
               <p>A mobile application was built using Ionic, AngularJS. Users could search medicine by name and location. They could also check the addresses of the nearby pharmacies which have the medicines they needed. This feature was developed using cordova map plugin and google map api.</p>
-              <img src="img/medic2.png" alt="">
+              <img class="modal-img" src="img/medic2.png" alt="">
               <p>A NodeJS server was created. It could work with the mobile application and the shared database.</p>
             </div>
             <div class="">
