change text size

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <img src="./img/ava.jpg" alt="" class="avatar">
           </div>
           <div class="" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
-            <h1 class="max-heading">Hi, I'm Huong</h1>
-            <h3 class="">Web developer - Thinker - Inspirer</h3>
+            <h1 class="primary-heading">Hi, I'm Huong</h1>
+            <h3 class="second-heading">Web developer - Thinker - Inspirer</h3>
           </div>
         </div>
       </header>
