--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title dark-blue" id="instagramModal">Instagram</h3>
+            <h3 class="modal-title " id="instagramModal">Instagram</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <img class="close-icon" src="./img/times.svg" alt="">
             </button>
@@ -204,7 +204,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title dark-blue" id="petModal">Pet Care System</h3>
+            <h3 class="modal-title " id="petModal">Pet Care System</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <img class="close-icon" src="./img/times.svg" alt="">
             </button>
@@ -243,7 +243,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title dark-blue" id="medicModal">Medicool</h3>
+            <h3 class="modal-title " id="medicModal">Medicool</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <img class="close-icon" src="./img/times.svg" alt="">
             </button>
