--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
             <h1 class="primary-heading">Hi, I'm Huong</h1>
-            <h3 class="second-heading">Web developer - Thinker - Inspirer</h3>
+            <h4 class="second-heading">I'm a web developer with a great passion for feature development and learning.</h4>
           </div>
         </div>
       </header>
@@ -99,12 +99,12 @@
         <div class="about" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
           <h2 class="page-heading">About me<img src="./img/it-girl.png" alt="" /></h2>
           <p>I've worked on several web projects with different roles: frontend developer, backend developer, tester and so on.</p>
-          <p>My goal is to become a proficient web developer who can create true values for life</p>
+          <p>My goal is to become a proficient web developer who can create true values for life.</p>
           <p>Since starting to pursue web development career, I’ve always been a responsible and positive person who enjoys learning. I believe that a passion for learning and growing, together with a positive point of view is always the best material for building great things in life.</p>
           <div class="skills">
             <h4>My skills <img src="./img/code-pink.png" alt="" /></h4>
             <p>Frontend: HTML, Slim, CSS, SCSS, Bootstrap, JavaScript, jQuery, ReactJS, AngularJS, Ionic</p>
-            <p>Backend: Ruby on Rails, PHP, CodeIgniter, NodeJS, Minitest</p>
+            <p>Backend: Ruby on Rails, PHP, CodeIgniter, NodeJS, Minitest, MySQL, MongoDB</p>
             <p>Other: Git</p>
           </div>
         </div>
@@ -219,7 +219,10 @@
               <h5>The Product</h5>
               <img class="modal-img" src="img/pi-servo.jpg" alt="">
               <p>A pet feeding machine and a web application were developed. The pet feeding machine included a food dispenser, a servo and Raspberry Pi. Pet’s food could be released from the food dispenser as a result of Raspberry Pi triggering the servo to rotate the dispenser’s spinner. NodeJS and Pigpio – a C library - were applied to receive the requests from the web app and manipulate the servo.</p>
-              <p>Although the web application's UI was simple, it was a mobile-friendly progressive web app with all the core features such as <i>Feed now</i> and <i>Schedule next feed</i> included. ReactJS was used to make this application.</p>
+              <img class="modal-img" src="img/main_ui.png" alt="">
+              <p>Although the web application's UI was simple, it was a mobile-friendly progressive web app with all the core features, such as <i>Feed now</i> and <i>Schedule next feed</i> included. ReactJS was used to make this application.</p>
+              <img class="modal-img" src="img/schedule.png" alt="">
+              <p><i>The thesis will be published soon, and its link will be available shortly!</i></p>
             </div>
             <div class="">
               <h5>Technologies</h5>
