--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h4>My skills <img src="./img/code-pink.png" alt="" /></h4>
             <p>Frontend: HTML, Slim, CSS, SCSS, Bootstrap, JavaScript, jQuery, ReactJS, AngularJS, Ionic</p>
             <p>Backend: Ruby on Rails, PHP, CodeIgniter, NodeJS, Minitest, MySQL, MongoDB</p>
-            <p>Other: Git</p>
+            <p>Other: Git, Jira</p>
           </div>
         </div>
       </section>
