--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
               <p>A pet feeding machine and a web application were developed. The pet feeding machine included a food dispenser, a servo and Raspberry Pi. Pet’s food could be released from the food dispenser as a result of Raspberry Pi triggering the servo to rotate the dispenser’s spinner. NodeJS and Pigpio – a C library - were applied to receive the requests from the web app and manipulate the servo.</p>
               <img class="modal-img" src="img/main_ui.png" alt="">
               <p>Although the web application's UI was simple, it was a mobile-friendly progressive web app with all the core features, such as <i>Feed now</i> and <i>Schedule next feed</i> included. ReactJS was used to make this application.</p>
-              <img class="modal-img" src="img/schedule.png" alt="">
-              <p><i>The thesis will be published soon, and its link will be available shortly!</i></p>
+              <img class="modal-img pb-2" src="img/schedule.png" alt="">
+              <iframe class="modal-img" src="https://youtu.be/NS3fTqLKiFE"></iframe>
+              <p><i><a class="blue-link" href="https://www.theseus.fi/bitstream/handle/10024/334568/Pet_care_system.pdf?sequence=2&isAllowed=y">Read thesis</a></i></p>
             </div>
             <div class="">
               <h5>Technologies</h5>
