--- a/index.html
+++ b/index.html
@@ -222,8 +222,10 @@
               <img class="modal-img" src="img/main_ui.png" alt="">
               <p>Although the web application's UI was simple, it was a mobile-friendly progressive web app with all the core features, such as <i>Feed now</i> and <i>Schedule next feed</i> included. ReactJS was used to make this application.</p>
               <img class="modal-img pb-2" src="img/schedule.png" alt="">
-              <iframe class="modal-img" src="https://youtu.be/NS3fTqLKiFE"></iframe>
               <p><i><a class="blue-link" href="https://www.theseus.fi/bitstream/handle/10024/334568/Pet_care_system.pdf?sequence=2&isAllowed=y">Read thesis</a></i></p>
+            </div>
+            <div class="">
+              <iframe class="modal-video" src="https://www.youtube.com/embed/NS3fTqLKiFE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="">
               <h5>Technologies</h5>
