--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <header class="carrot-section text-center" id="intro">
         <div class="intro">
           <div class="avatar-wrapper">
-            <img src="./img/ava.jpg" alt="" class="avatar">
+            <img src="./img/work-ava.jpg" alt="" class="avatar">
           </div>
           <div class="" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
             <h1 class="primary-heading">Hi, I'm Huong</h1>
