--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huong's website</title>
-    <link rel="icon" href="./img/flower.png">
+    <link rel="icon" href="./img/code-pink.png">
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -17,8 +17,7 @@
   <body class="">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <img id="logo" src="./img/logo.png" alt="" height="100px">
-        <a class="navbar-brand " href="#intro">MIDNIGHT SCENT</a>
+        <a class="navbar-brand " href="#intro"><img id="logo" src="./img/logo.png" alt="" height="100px"></a>
         <button class="navbar-toggler text-uppercase font-weight-bold text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive"  aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <img class="nav-icon" src="./img/bars-solid.svg" alt="">
         </button>
@@ -62,7 +61,7 @@
                 <div class="hovereffect">
                   <img src="./img/camera1.jpg" alt="" id="insta">
                   <div class="overlay">
-                    <h3>Instagram</h3>
+                    <h3>Photo sharing application</h3>
                     <p>
                     <a class="info" href="" data-toggle="modal" data-target="#instaModal">LEARN MORE</a>
                     </p>
@@ -140,7 +139,6 @@
                 </strong>
             </p>
             <p>
-              <!-- <i class="fab fa-linkedin fa-lg"></i> -->
               <img src="./img/linkedin.png" alt="">
               <strong>
                 <a href="https://www.linkedin.com/in/huong-nguyen-oamk/" class="white-link">linkedin.com/in/huong-nguyen-oamk</a>
@@ -157,7 +155,7 @@
       </section>
 
       <footer>
-        <p class="pt-5">Copyright &copy; MidnightScent 2020</p>
+        <p class="pt-5">Copyright &copy; DEVHUONG 2020</p>
       </footer>
     </div>
 
@@ -166,7 +164,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title " id="instagramModal">Instagram</h3>
+            <h3 class="modal-title " id="instagramModal">Photo sharing app</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <img class="close-icon" src="./img/times.svg" alt="">
             </button>
