--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <img src="./img/gmail.png" alt="">
                 <strong class="">
                   <a href="mailto:nguyenquynhhuong2305@gmail.com" class="white-link">
-                    nguyenquynhhuong&#64;gmail.com
+                    nguyenquynhhuong2305&#64;gmail.com
                   </a>
                 </strong>
             </p>
