--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
           >
             <h1 class="primary-heading">Hi, I'm Huong</h1>
             <h4 class="second-heading">
-              I'm a web developer with a great passion for feature development
-              and learning.
+              I'm a software developer with a strong passion for medical technologies and an enthusiasm for learning.
             </h4>
           </div>
         </div>
@@ -208,15 +207,14 @@
             About me<img src="./img/it-girl.png" alt="" />
           </h2>
           <p>
-            I've worked on several web projects with different roles: frontend
+            I've worked on several software projects with different roles: frontend
             developer, backend developer, tester and so on.
           </p>
           <p>
-            My goal is to become a proficient web developer who can create true
-            values for life.
+            My goal is to become a proficient developer and deliver state-of-the-art medical applications.
           </p>
           <p>
-            Since starting to pursue web development career, I’ve always been a
+            Since starting to pursue software development career, I’ve always been a
             responsible and positive person who enjoys learning. I believe that
             a passion for learning and growing, together with a positive point
             of view is always the best material for building great things in
@@ -229,7 +227,7 @@
               ReactJS, AngularJS, Ionic
             </p>
             <p>
-              Backend: Ruby on Rails, PHP, CodeIgniter, NodeJS, Minitest, MySQL,
+              Backend: Ruby, Ruby on Rails, PHP, CodeIgniter, NodeJS, Minitest, MySQL,
               MongoDB
             </p>
             <p>Other: Git, Jira</p>
@@ -492,7 +490,7 @@
                 home has raised significantly worldwide, it is not yet popular
                 and affordable in many countries at the time. As a result, DIY
                 pet care system can be an excellent choice for people who are
-                not able to purchase automatic pet feeder.
+                not able to purchase an automatic pet feeder.
               </p>
               <p>
                 The aim of this project was to create a pet feeding machine and
