--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <header class="carrot-section text-center" id="intro">
         <div class="intro">
           <div class="avatar-wrapper">
-            <img src="./img/work-ava.jpg" alt="" class="avatar" />
+            <img src="./img/web-ava.jpeg" alt="" class="avatar" />
           </div>
           <div
             class=""
@@ -84,8 +84,7 @@
           >
             <h1 class="primary-heading">Hi, I'm Huong</h1>
             <h4 class="second-heading">
-              I'm an engineer with a great passion for software development and
-              healthcare.
+              I'm an engineer with a great passion for medical data science and software development
             </h4>
           </div>
         </div>
@@ -97,8 +96,7 @@
             My works <img src="./img/project.png" alt="" />
           </h2>
           <p>
-            Here are a few projects I completed during my study. Do you want to
-            see more?
+            Here are a few projects I completed during my bachelor's study. Many projects cannot be shown on this website due to data protection and security reasons. Contact me if you want to know more about my projects!
             <strong
               ><a href="mailto:nguyenquynhhuong2305@gmail.com" class="blue-link"
                 >Email me.</a
@@ -187,35 +185,26 @@
             About me<img src="./img/it-girl.png" alt="" />
           </h2>
           <p>
-            I've joined several software projects as a frontend developer,
-            backend developer, tester, and so on. I also challenged myself by
-            assisting researchers in studying new technologies and methods.
-          </p>
-          <p>
-            My goal is to become a proficient software developer who can create
-            values for life and provide more tools to people so that they can
-            live a healthier and a better life.
-          </p>
-          <p>
-            Since starting to pursue software development career, I’ve always
-            been a responsible and positive person who loves learning new
-            things. I believe that a hard-working attitude, a progressive
-            mindset and a positive point of view are always the best materials
-            for building great things in life.
+            Data scientist with a strong software development background, driven by a deep passion for medical technology. Experienced in developing software solutions and proficient in deep learning and image processing techniques. Strongly motivated to advance healthcare and improve patient outcomes. Excited to contribute to the intersection of data science, software development, and medical technology.
           </p>
           <div class="skills">
             <h4>
               My technical skills <img src="./img/code-pink.png" alt="" />
             </h4>
             <p>
-              Frontend: HTML, Slim, CSS, SCSS, Bootstrap, JavaScript, jQuery,
-              ReactJS, AngularJS, Ionic
+              Data Science: Python, PyTorch, Pandas, OpenCV
             </p>
             <p>
-              Backend: Python, Flask, Ruby on Rails, PHP, CodeIgniter, NodeJS,
-              Minitest, MySQL, MongoDB
+              Software Development: JavaScript, Python, PHP, Ruby, Java
+              ReactJS, AngularJS, NodeJS, MongoDB, MySQL
             </p>
             <p>Other: Git, Jira, Bash script</p>
+            <h4>
+              My language skills <img src="./img/speak.png" alt="" />
+            </h4>
+            <p>English C1 </p>
+            <p>German B1 </p>
+            <p>Vietnamese Native </p>
           </div>
         </div>
       </section>
@@ -228,6 +217,52 @@
           data-aos-duration="1500"
         >
           <h2 class="page-heading text-center">Work experience</h2>
+          
+          <h3><img src="./img/exp.png" /> Franka Emika GmbH</h3>
+          <h4>Technologies</h4>
+          <p>ReactJS, Bash Script, JavaScript, C++, Haskell</p>
+          <h4>Tasks</h4>
+          <ul>
+            <li>
+              Implement new features in "Desk" - a dashboard for controlling company’s robots
+            </li>
+            <li>
+              Perform tests on robots to check their behaviors
+            </li>
+            <li>Modify robot settings to optimize robot functionalities while still guaranteeing safety</li>
+          </ul>
+
+          <h3><img src="./img/exp.png" /> Urgrow GmbH</h3>
+          <h4>Technologies</h4>
+          <p>MongoDB, MySQL, UML, Data Modeling, Data Engineering</p>
+          <h4>Tasks</h4>
+          <ul>
+            <li>
+              Define concepts for data models based on mobile ap- plication needs and biological aspects
+            </li>
+            <li>
+              Illustrate models, concepts, and their relationships us- ing UML
+            </li>
+            <li>Test and implement databases using MongoDB and MySQL</li>
+          </ul>
+
+          <h3><img src="./img/exp.png" /> fortiss GmbH</h3>
+          <h4>Technologies</h4>
+          <p>Java, IoT, Web-of-Things</p>
+          <h4>Tasks</h4>
+          <ul>
+            <li>
+              Install, configure tools, and perform tests needed for Web-of-Things (WoT) projects in different OS
+            </li>
+            <li>
+              Write bash scripts for automated deployment (CI/CD)
+            </li>
+            <li>Created bash scripts for automated deployment (CI/CD)</li>
+            <li>
+              Participate in the configuration, development, and de- ployment of a Mendix-based application (collaborated with Siemens)
+            </li>
+          </ul>
+
           <h3><img src="./img/exp.png" /> Mailbutler GmbH</h3>
           <h4>Technologies</h4>
           <p>
@@ -237,67 +272,15 @@
           <h4>Tasks</h4>
           <ul>
             <li>
-              Implemented new and convenient tools for customer support team
+              Implement new features and convenient tools on the company’s dashboard
             </li>
             <li>
-              Maintained and extended existing user tools and pages in the
-              internal dashboard by debugging, restructuring, and improving code
+              Debug, refactor, and optimize existing features
             </li>
             <li>
-              Built new features and functions to enhance sales and user
-              interaction
+              Review and generate automated tests
             </li>
-            <li>Reviewed and generated automated tests for new features</li>
-            <li>Maintained and optimized company's commercial website</li>
-          </ul>
-
-          <h3><img src="./img/exp.png" /> fortiss GmbH</h3>
-          <h4>Technologies</h4>
-          <p>Java, IoT, Web-of-Things</p>
-          <h4>Tasks</h4>
-          <ul>
-            <li>
-              Installed and configured tools needed for the development of
-              Web-of-Things (WoT)Thing Directory projects in Windows and Linux
-            </li>
-            <li>
-              Performed tests and evaluated strengths and weaknesses of WoT
-              Thing Directory projects
-            </li>
-            <li>Created bash scripts for automated deployment (CI/CD)</li>
-            <li>
-              Participated in the configuration, development, and deployment of
-              a Mendix-based application, which allows users to create web pages
-              and logic that automate the interconnection of greenfield and
-              brownfield devices into an Industrial IoT Edge system
-              (collaborated with Siemens)
-            </li>
-            <li>
-              Facilitated software update and solved incompatible errors using
-              Java
-            </li>
-            <li>
-              Supported the implementation of the server in the demonstrator
-              (Lego Mindstorm and Siemens’ uArm robots)
-            </li>
-          </ul>
-
-          <h3><img src="./img/exp.png" /> Urgrow GmbH</h3>
-          <h4>Technologies</h4>
-          <p>MongoDB, MySQL, UML, Data Modeling, Data Engineering</p>
-          <h4>Tasks</h4>
-          <ul>
-            <li>
-              Define concepts for data models based on mobile application needs
-              and biological aspects
-            </li>
-            <li>
-              Illustrate models, concepts and their relationships using graphs
-              and diagrams
-            </li>
-            <li>Define microservice infrastructure</li>
-            <li>Test and implement databases using MongoDB and MySQL</li>
-            <li>Collaborate with other teammates to deliver databases</li>
+            <li>Use Ruby, HTML, CSS, JavaScript, Amazon Web Service S3</li>
           </ul>
         </div>
       </section>
@@ -345,7 +328,7 @@
       </section>
 
       <footer>
-        <p class="pt-5">Copyright &copy; DEVHUONG 2021</p>
+        <p class="pt-5">Designed and developed by Huong Nguyen in 2020</p>
       </footer>
     </div>
 
